feat: FloatingButton 컴포넌트 퍼블리싱

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,64 @@
 @import "tailwindcss";
+@import "./font.css";
+
+@theme {
+    /* Primary */
+    --color-main800: #;
+    --color-main700: #;
+    --color-main600: #;
+    --color-main500: #ffbb00;
+    --color-main400: #;
+    --color-main300: #;
+    --color-main200: #;
+    --color-main100: #;
+
+    /* Gray */
+    --color-gray1000: #2f2f2f;
+    --color-gray900: #454545;
+    --color-gray800: #595959;
+    --color-gray700: #727272;
+    --color-gray600: #979797;
+    --color-gray500: #bfbfbf;
+    --color-gray400: #d4d4d4;
+    --color-gray300: #e4e4e4;
+    --color-gray200: #efefef;
+    --color-gray100: #f7f7f7;
+}
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    font-family: "Pretendard-Regular", sans-serif;
+    color: var(--color-gray1000);
+}
+button {
+    cursor: pointer;
+}
+
+.pretendard-light {
+    font-family: "Pretendard-Light", sans-serif;
+}
+.pretendard-meedium {
+    font-family: "Pretendard-Medium", sans-serif;
+}
+.pretendard-regular {
+    font-family: "Pretendard-Regular", sans-serif;
+}
+.pretendard-semibold {
+    font-family: "Pretendard-SemiBold", sans-serif;
+}
+.gmarket-sans {
+    font-family: "GmarketSansBold", sans-serif;
+    letter-spacing: -0.22em;
+}
+
+@layer components {
+    .full {
+        @apply w-full min-h-full;
+    }
+    .floating-btn {
+        @apply absolute flex right-5 w-15 h-15 justify-center items-center rounded-full duration-300;
+    }
+}
