fix: 스타일 오타 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,7 @@ button {
 .pretendard-light {
     font-family: "Pretendard-Light", sans-serif;
 }
-.pretendard-meedium {
+.pretendard-medium {
     font-family: "Pretendard-Medium", sans-serif;
 }
 .pretendard-regular {
