--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,7 +58,13 @@ button {
     .full {
         @apply w-full min-h-full;
     }
+    .center {
+        @apply flex justify-center items-center;
+    }
     .floating-btn {
         @apply absolute flex right-5 w-15 h-15 justify-center items-center rounded-full duration-300;
+    }
+    .header-btn {
+        @apply w-10 h-10 flex justify-center items-center hover:bg-gray100 active:bg-gray100 duration-100 ease-out rounded-lg;
     }
 }
