--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
     /* Primary */
     --color-main800: #000000;
     --color-main700: #000000;
-    --color-main600: #000000;
+    --color-main600: #ff9500;
     --color-main500: #ffbb00;
     --color-main400: #000000;
     --color-main300: #000000;
