style: grade 커스텀 색상 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,8 +26,8 @@
 
     /* Grade */
     --color-bronze: #987c54;
-    --color-silver: #a5c2ca;
-    --color-gold: #ffcb1f;
+    --color-silver: #a4c9d7;
+    --color-gold: #ffc300;
     --color-vip: #ff0037;
     --color-vvip: #2f2f2f;
 }
